--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node index.ts",
     "start": "NODE_ENV=production ts-node-dev index.ts",
-    "cli" : "node cli-client.mjs",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings=5",
+    "cli" : "node cli-client.mjs",
     "lint:fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx --max-warnings=5",
     "build": "tsc"
   },
@@ -21,17 +21,24 @@
     "bcryptjs": "^2.4.3",
     "commander": "^11.1.0",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
+    "figlet": "^1.7.0",
     "he": "^1.2.0",
+    "inquirer": "^9.2.12",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "ora": "^8.0.1",
     "passport": "^0.7.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-local": "^1.0.0",
+    "prompts": "^2.4.2",
+    "repl": "^0.1.3",
+    "request": "^2.88.2",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "supertest": "^6.3.3",
+    "sync-request": "^6.1.0",
+    "ts-node-dev": "^2.0.0",
+    "underscore": "^1.13.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
